overflow bug

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -8,6 +8,11 @@
 
 .chat__messages {
   flex: 1;
+  overflow: scroll;
+}
+
+.chat__messages::-webkit-scrollbar {
+  display: none;
 }
 
 .chat__input {
